force-app/main/default/objects/SetupCompanyMaster__c/SetupCompanyMaster__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SetupCompanyMaster</description>
    <label>Setup CompanyMaster</label>
</CustomObject>