force-app/main/default/objects/SetupCompanyMaster__c/fields/Disable_grain_update_validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_grain_update_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable grain update validation</label>
    <type>Checkbox</type>
</CustomField>