force-app/main/default/objects/SetupCompanyMaster__c/fields/Enable_CM__c.field-meta.xml
<CustomField>
    <fullName>Enable_CM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To control company master service</description>
    <label>Enable CM</label>
    <type>Checkbox</type>
</CustomField>