force-app/main/default/objects/SetupCompanyMaster__c/fields/Log_API_Calls__c.field-meta.xml
<CustomField>
    <fullName>Log_API_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To record all API calls</description>
    <label>Log API Calls</label>
    <type>Checkbox</type>
</CustomField>